Some addiitions 1) ShakeActivity - загрузка картинки теперь не из кода 2) MainActivity - много чего 3) strings and en-strings 4) AndroidManifest - описаны settings and shake

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,26 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".SettingsActivity"
+            android:label="@string/settingsManifestLabel">
+            <intent-filter>
+                <action android:name="com.project.a_team.wakeupper.intent.action.SETTINGS" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+
+        <activity
+            android:name=".activities.ShakeActivity"
+            android:label="@string/shakeManifestLabel">
+            <intent-filter>
+                <action android:name="com.project.a_team.wakeupper.intent.action.SHAKE" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
