--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.project.a_team.wakeupper" >
 
-    <uses-permission
-        android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.VIBRATE" />
 
     <application
         android:allowBackup="true"
@@ -19,25 +18,27 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".SettingsActivity"
-            android:label="@string/settingsManifestLabel">
+            android:label="@string/settingsManifestLabel" >
             <intent-filter>
                 <action android:name="com.project.a_team.wakeupper.intent.action.SETTINGS" />
 
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".activities.ShakeActivity"
-            android:label="@string/shakeManifestLabel">
+            android:label="@string/shakeManifestLabel" >
             <intent-filter>
                 <action android:name="com.project.a_team.wakeupper.intent.action.SHAKE" />
 
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".activities.ArithmeticActivity"
+            android:label="@string/arithmeticManifestLabel" >
         </activity>
     </application>
 
