--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,15 +2,13 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.project.a_team.wakeupper" >
 
-    <uses-permission
-        android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.VIBRATE" />
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-
         <activity
             android:name="com.project.a_team.wakeupper.MainActivity"
             android:label="@string/app_name" >
@@ -20,7 +18,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name="com.project.a_team.wakeupper.SettingsActivity"
             android:label="@string/settingsManifestLabel" >
@@ -30,7 +27,6 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
-
         <activity
             android:name="com.project.a_team.wakeupper.activities.ShakeActivity"
             android:label="@string/shakeManifestLabel" >
@@ -40,12 +36,10 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
-
         <activity
             android:name="com.project.a_team.wakeupper.activities.ArithmeticActivity"
             android:label="@string/arithmeticManifestLabel" >
         </activity>
-
         <activity
             android:name="com.project.a_team.wakeupper.activities.ChooseActivity"
             android:label="@string/title_activity_choose" >
@@ -55,7 +49,6 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
-
         <activity
             android:name="com.project.a_team.wakeupper.UnblockActivity"
             android:label="@string/title_activity_unblock" >
