--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,7 +13,8 @@ android {
     }
     buildTypes {
         release {
-            runProguard false
+            //minifyEnabled false
+            //runProguard false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
