--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,6 +36,17 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name="com.project.a_team.wakeupper.activities.PhraseActivity"
+            android:label="@string/shakeManifestLabel" >
+            <intent-filter>
+                <action android:name="com.project.a_team.wakeupper.intent.action.PHRASE" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+
         <activity
             android:name="com.project.a_team.wakeupper.activities.ArithmeticActivity"
             android:label="@string/arithmeticManifestLabel" >
