--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -73,6 +73,9 @@
         <receiver android:name=".AlarmReceiver">
 
         </receiver>
+        <service android:name=".AlarmReceiver$AlarmNotification" >
+
+        </service>
     </application>
 
 </manifest>
